[gd_scene load_steps=3 format=3 uid="uid://tplplauokf8g"]

[ext_resource type="Texture2D" uid="uid://dvpqs4dayer11" path="res://icon.svg" id="1_4wkvu"]
[ext_resource type="Script" path="res://weapons/wingsword/wing_sword.gd" id="1_tsq6q"]

[node name="WingSword" type="Node2D"]
script = ExtResource("1_tsq6q")

[node name="BulletSpawns" type="Node2D" parent="."]

[node name="BulletSpawn1" type="Marker2D" parent="BulletSpawns"]
position = Vector2(0, -12)
rotation = -1.5708

[node name="Sprite2D" type="Sprite2D" parent="BulletSpawns/BulletSpawn1"]
visible = false
scale = Vector2(0.001, 0.001)
texture = ExtResource("1_4wkvu")

[node name="BulletSpawn2" type="Marker2D" parent="BulletSpawns"]
position = Vector2(0, 12)
rotation = 1.5708

[node name="Sprite2D2" type="Sprite2D" parent="BulletSpawns/BulletSpawn2"]
visible = false
scale = Vector2(0.001, 0.001)
texture = ExtResource("1_4wkvu")

[node name="ShootSpeedTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="ShootSpeedTimer" to="." method="_on_shoot_speed_timer_timeout"]
